<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>protoc</artifactId>
        <groupId>com.github.auties00</groupId>
        <version>1.9</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>
    <artifactId>protoc-tool</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <javac.package>jdk.compiler/com.sun.tools.javac</javac.package>
        <google.module>com.google.googlejavaformat</google.module>
        <open.tree>${javac.package}.tree=${google.module}</open.tree>
        <open.util>${javac.package}.util=${google.module}</open.util>
        <open.code>${javac.package}.code=${google.module}</open.code>
        <open.api>${javac.package}.api=${google.module}</open.api>
        <open.comp>${javac.package}.comp=${google.module}</open.comp>
        <open.jvm>${javac.package}.jvm=${google.module}</open.jvm>
        <open.model>${javac.package}.model=${google.module}</open.model>
        <open.processing>${javac.package}.processing=${google.module}</open.processing>
        <open.resources>${javac.package}.resources=${google.module}</open.resources>
        <open.main>${javac.package}.main=${google.module}</open.main>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>${open.tree}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.util}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.code}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.api}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.comp}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.jvm}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.processing}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.model}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.resources}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.main}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <archive>
                                <manifest>
                                    <mainClass>it.auties.protobuf.application.ModernProtocApplication</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.5.0</version>
                <configuration>
                    <name>Modern Protobuf</name>
                    <appVersion>${project.version}</appVersion>
                    <vendor>it.auties</vendor>
                    <runtimeImage>${java.home}</runtimeImage>
                    <destination>${project.build.directory}/distro</destination>
                    <input>${project.build.sourceDirectory}</input>
                    <mainJar>${project.build.outputDirectory}/${artifactId}-${version}-jar-with-dependencies.jar</mainJar>
                    <winConsole>true</winConsole>
                    <winDirChooser>true</winDirChooser>
                    <winPerUserInstall>true</winPerUserInstall>
                    <javaOptions>
                        <option>-Dfile.encoding=UTF-8</option>
                    </javaOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.github.auties00</groupId>
            <artifactId>protoc-api</artifactId>
            <version>1.9</version>
        </dependency>

        <dependency>
            <groupId>com.github.auties00</groupId>
            <artifactId>protoc-parser</artifactId>
            <version>1.9</version>
        </dependency>

        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.6.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.googlejavaformat</groupId>
            <artifactId>google-java-format</artifactId>
            <version>1.13.0</version>
        </dependency>

        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-templates</artifactId>
            <version>3.0.8</version>
            <exclusions>
                <exclusion>
                    <groupId>org.codehaus.groovy</groupId>
                    <artifactId>groovy-xml</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>
</project>